--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model UPPHercegovina.WebApplication.Models.PersonProduct
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalji";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Detalji</h2>
 
 <div>
     <h4>PersonProduct</h4>
@@ -100,6 +100,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Value)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Value)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Urgently)
         </dt>
 
@@ -118,6 +126,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Izmjeni", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Nazad na listu", "Index")
 </p>
