--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.UserId)
-        @Html.HiddenFor(model => model.WarehouseId)
+        @Html.HiddenFor(model => model.Warehouse1Id)
         @Html.HiddenFor(model => model.Quality)
         @Html.HiddenFor(model => model.Status)
         @Html.HiddenFor(model => model.Accepted)
@@ -81,6 +81,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Value, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Damaged, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -102,7 +110,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Izmjeni" class="btn btn-default" />
             </div>
         </div>
     </div>
