--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
@@ -46,6 +46,9 @@
         <th>
             @Html.DisplayNameFor(model => model.CircaValue)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Value)
+        </th>
         <th></th>
     </tr>
 
@@ -71,6 +74,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CircaValue)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Value)
         </td>
         <td>
             @Html.ActionLink("Izmjeni", "Edit", new { id=item.Id }) |
