--- a/UPPHercegovina.WebApplication/Views/Processes/AcceptProcess.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/AcceptProcess.cshtml
@@ -66,6 +66,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Value, htmlAttributes: new { @class = "control-label col-md-2", @required = "required" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Warehouse1Id, "Skladište", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Warehouse1Id", null, htmlAttributes: new { @class = "form-control" })
