--- a/UPPHercegovina.WebApplication/Views/Processes/Processing.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/Processing.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<UPPHercegovina.WebApplication.Models.PersonProduct>
 
 @{
-    ViewBag.Title = "Transakcije proizvoda";
+    ViewBag.Title = "Proizvodi u obradi";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Transakcije proizvoda</h2>
+<h2>Proizvodi u obradi</h2>
 
 <table class="table">
     <tr>
@@ -35,6 +35,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Urgently)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Value)
         </th>
         <th></th>
     </tr>
@@ -68,6 +71,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Urgently)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Value)
         </td>
         <td>
             @Html.ActionLink("Prihvati", "AcceptProcess", new { id=item.Id }) |
