--- a/UPPHercegovina.WebApplication/Views/Processes/RejectProcess.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/RejectProcess.cshtml
@@ -101,6 +101,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Value)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Value)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Urgently)
         </dt>
 
