--- a/UPPHercegovina.WebApplication/Views/Transactions/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Transactions/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model UPPHercegovina.WebApplication.Models.Transaction
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalji";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Detalji</h2>
 
 <div>
     <h4>Transaction</h4>
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserId)
+            @Html.DisplayFor(model => model.User.FullName)
         </dd>
 
         <dt>
@@ -70,6 +70,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Odobri", "FinishTransaction", new { id = Model.Id, status = true }) |
+    @Html.ActionLink("Odbi", "FinishTransaction", new { id = Model.Id, status = false }) |
+    @Html.ActionLink("Nazad na listu", "Index")
 </p>
