--- a/UPPHercegovina.WebApplication/Views/Transactions/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Transactions/Edit.cshtml
@@ -1,18 +1,19 @@
 ﻿@model UPPHercegovina.WebApplication.Models.Transaction
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Izmjeni";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Izmjeni</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+    @Html.HiddenFor(model => model.UserId)
+        
     <div class="form-horizontal">
-        <h4>Transaction</h4>
+        <h4>Transakcije</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -25,13 +26,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Details, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -86,5 +87,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Nazad na listu", "Index")
 </div>
