--- a/UPPHercegovina.WebApplication/Views/_ViewStart.cshtml
+++ b/UPPHercegovina.WebApplication/Views/_ViewStart.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    //if (this.User.IsInRole("Super-Administrator") || this.User.IsInRole("Administrator"))
+    //{
+    //    Layout = "~/Views/Shared/_Layout.cshtml";
+    //}
+    //else
+    //if(this.User.IsInRole("Korisnik") || !this.User.Identity.IsAuthenticated)
+    //{
+    //    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 
-    if (this.User.IsInRole("Super-Administrator") || this.User.IsInRole("Administrator"))
-    {
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-    else
-    if(this.User.IsInRole("Korisnik") || !this.User.Identity.IsAuthenticated)
-    {
-        Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
-        
-    }
+    //}
 
     //Layout = "~/Views/Shared/_Layout.cshtml";
 }
