--- a/UPPHercegovina.WebApplication/Views/Townships/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Townships/Details.cshtml
@@ -26,6 +26,67 @@
             @Html.DisplayFor(model => model.Entity)
         </dd>
 
+        <dt>
+            <label>Lokacija</label>
+        </dt>
+        <dd>
+            <div class="row">
+
+            <div class="col-md-4">
+                <div id="map" class="mapa" style="border:double"></div>
+
+                <script>
+
+
+                                function initMap() {
+
+
+                                    var myLatLng = {lat: @ViewBag.lat, lng: @ViewBag.lng};
+
+                                    var map = new google.maps.Map(document.getElementById('map'), {
+                                        zoom: 8,
+                                        center: myLatLng
+                                    });
+
+                                    var marker = new google.maps.Marker({
+                                        position: myLatLng,
+                                        map: map,
+                                        title: 'Nije moguce mijenjati!',
+                                        //draggable:true
+                                    });
+
+
+                                    
+
+
+
+
+
+                                    function displayCoordinates(pnt) {
+
+                                        var lat = pnt.lat();
+                                        lat = lat.toFixed(4);
+                                        var lng = pnt.lng();
+                                        lng = lng.toFixed(4);
+
+
+
+
+                                    }
+                                }
+
+
+
+
+
+
+                </script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ0Bah24dB4oqaIN9peo9nnFAnboZjzmY&callback=initMap"
+                        async defer></script>
+
+            </div>
+</div>
+        </dd>
     </dl>
 </div>
 <p>
